--- a/sources.bib
+++ b/sources.bib
@@ -64,7 +64,7 @@ MRREVIEWER = {W.\ S.\ Massey},
  PUBLISHER = {Cambridge University Press, Cambridge},
       YEAR = {2002},
      PAGES = {xii+544},
-      ISBN = {0-521-79160-X; 0-521-79540-0},
+      ISBN = {0-521-79540-0},
    MRCLASS = {55-01 (55-00)},
   MRNUMBER = {1867354},
 MRREVIEWER = {Donald\ W.\ Kahn},
@@ -85,17 +85,33 @@ MRREVIEWER = {Donald\ M.\ Davis},
        URL = {https://doi.org/10.4171/048},
 }
 
-@book {lueck,
-    AUTHOR = {L\"uck, Wolfgang},
-     TITLE = {Algebraische Topologie Homologie und Mannigfaltigkeiten},
- PUBLISHER = {vieweg},
-      YEAR = {2005},
-      ISBN = {978-3-528-03218-0},
+@book{luck,
+ author = {L{\"u}ck, Wolfgang},
+ title = {Algebraische {Topologie}. {Homologie} und {Mannigfaltigkeiten}},
+ fseries = {Vieweg Studium},
+ series = {Vieweg Stud.},
+ isbn = {3-528-03218-9},
+ year = {2005},
+ publisher = {Wiesbaden: Vieweg},
+ language = {German},
+ keywords = {55-01,57-01,55N40},
+ zbMATH = {2134805},
+ Zbl = {1062.55001}
 }
 
-@book{luck,
-  title={Algebraische Topologie: Homologie und Mannigfaltigkeiten},
-  author={L{\"u}ck, Wolfgang},
-  year={2012},
-  publisher={Springer-Verlag}
+@article{zhang,
+author = {Zhang, Zhuo},
+title = {A Geometric View on Bordism Homology},
+language = {English},
+year = {2023},
+month = {12}
 }
+
+%J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
+Mathematics, 82(3):505–521, 1960.
+
+M. Hopkins. The extraordinary bordism homology. Available at: https://cseweb.ucsd.
+edu/~nmhopkin/papers/Bordism.pdf, 2016.
+
+P.E. Conner and E.E. Floyd. Differentiable Periodic Maps. Ergebnisse der Mathematik und
+ihrer Grenzgebiete. 2. Folge. Springer Berlin Heidelberg, 2013.
